--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -7,10 +7,10 @@
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-    "Sorry for two update in two day but I have to do it to contrast piracy",
-    "Remember to open the app for the first time you update and then re-apply to the launcher",
-    "Do this expecially if you are using OnePlus Launcher",	
-    "I've improved the UI too, adding Material 2 cards style",
+    "Sorry for two updates in two days but I have to do it to contrast piracy;",
+    "Remember to open the app for the first time you update and then re-apply the icon pack to the launcher;",
+    "Do this expecially if you are using OnePlus Launcher;",	
+    "I've improved the UI too, adding Material 2 cards style;",
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
