--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -11,6 +11,7 @@
     "Remember to open the app for the first time you update and then re-apply the icon pack to the launcher;",
     "Do this expecially if you are using OnePlus Launcher;",	
     "I've improved the UI too, adding Material 2 cards style;",
+    "If you face problems with Lawnchair, they depends by the launcher caused by the switch from v1 to v2;",	
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
