--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -1,17 +1,23 @@
 {
-  "latestVersion": "7.0.1",
-  "latestVersionCode": 70,
+  "latestVersion": "7.1",
+  "latestVersionCode": 71,
   "disableRequest": {
-    "below": 69,
-    "on": "69"
+    "below": 70,
+    "on": "70"
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-    "Sorry for two updates in two days but I have to do it to contrast piracy;",
-    "Remember to open the app for the first time you update and then re-apply the icon pack to the launcher;",
-    "Do this expecially if you are using OnePlus Launcher;",	
-    "I've improved the UI too, adding Material 2 cards style;",
-    "If you face problems with Lawnchair, they depends by the launcher caused by the switch from v1 to v2;",	
+    "Improved support to Android 10;",
+    "Added more than 110 new icons;",
+    "Added 10 new wallpapers;",
+    "Added new launchers;",		
+    "Added new icons variants;",
+    "Rebuilt and improved a lot of icons;",		
+    "Updated translations;",	
+    "Updated icons codes list;",
+    "Updated CandyBar base;",
+    "Improvements and bug fixes;",
+    "<b>Please, download Pixelful from Play Store for support me.</b>"
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
