--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -8,15 +8,15 @@
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
     "Improved support to Android 10;",
-    "Added more than 110 new icons;",
-    "Added 10 new wallpapers;",
-    "Added new launchers;",		
-    "Added new icons variants;",
-    "Rebuilt and improved a lot of icons;",		
-    "Updated translations;",	
-    "Updated icons codes list;",
-    "Updated CandyBar base;",
-    "Improvements and bug fixes;",
+    "Added more than 110 new icons;"
+    "Added 10 new wallpapers;"
+    "Added new launchers;"
+    "Added new icons variants;"
+    "Rebuilt and improved a lot of icons;"		
+    "Updated translations;"
+    "Updated icons codes list;"
+    "Updated CandyBar base;"
+    "Improvements and bug fixes;"
     "<b>Please, download Pixelful from Play Store for support me.</b>"
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
