--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -1,5 +1,5 @@
 {
-  "latestVersion": "7.00",
+  "latestVersion": "7.0",
   "latestVersionCode": 70,
   "disableRequest": {
     "below": 70,
@@ -12,7 +12,7 @@
     "Added 10 new wallpapers;"
     "Added new launchers;"
     "Added new icons variants;"
-    "Rebuilt and improved a lot of icons;"		
+    "Rebuilt and improved a lot of fdgfdgdgicons;"		
     "Updated translations;"
     "Updated icons codes list;"
     "Updated CandyBar base;"
