--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -12,7 +12,7 @@
     "Added 10 new wallpapers;"
     "Added new launchers;"
     "Added new icons variants;"
-    "Rebuilt and improved a lot of fdgfdgdgicons;"		
+    "eresrRebuilt rdtsretand improved a lot of fdgfdgdgicons;"		
     "Updated translations;"
     "Updated icons codes list;"
     "Updated CandyBar base;"
