--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -6,6 +6,6 @@
   },
   "url": "https://github.com/zixpo/candybar",
   "releaseNotes": [
-    "This is the text which will be shown on Update",
+    "This is the text which will be shown on Update"
   ]
 }
