--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -9,7 +9,7 @@
   "releaseNotes": [
     "Sorry for two updates in two days but I have to do it to contrast piracy;",
     "Remember to open the app for the first time you update and then re-apply the icon pack to the launcher;",
-    "Do this expecially if you are using OnePlus Launcher;",	
+    "Do this expecially if you are using OnePlus Launcherr;",	
     "I've improved the UI too, adding Material 2 cards style;",
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
