--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -7,10 +7,20 @@
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-    "Sorry for two updates in two days but I have to do it to contrast piracy;",
-    "Remember to open the app for the ffdffffirst time you update and then re-applyfff the icon pack to the launcher;",
-    "Do this expecially if you are using OnePlus Launcherr;",	
-    "I've improved the UI too, adding Material 2 cards style;",
+    "Improved support to Android 10;",
+    "Added more than 110 new icons;",
+    "Added 10 new wallpapers;",	
+    "Added new icons variants;",
+    "Added new functions;",
+    "Added shortcuts;",
+    "Redded support to Muzei;",
+    "Rebuilt and improved a lot of icons;",
+    "Improved MIUI icons;",
+    "Improved dark theme for amoled;",
+    "Updated translations;",
+    "Updated icons codes list;",
+    "Updated CandyBar base;",
+    "Improvements and bug fixes;",
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
