--- a/darkful_config.json
+++ b/darkful_config.json
@@ -1,17 +1,20 @@
 {
-  "latestVersion": "2.0",
-  "latestVersionCode": 10,
+  "latestVersion": "2.2",
+  "latestVersionCode": 12,
   "disableRequest": {
-    "below": 9,
-    "on": "9"
+    "below": 11,
+    "on": "11"
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-    "Sorry for two updates in two days but I have to do it to contrast piracy;",
-    "Remember to open the app for the first time you update and then re-apply the icon pack to the launcher;",
-    "Do this expecially if you are using OnePlus Launcher;",	
-    "I've improved the UI too, adding Material 2 cards style;",
-    "If you face problems with Lawnchair, they depends by the launcher caused by the switch from v1 to v2;",	
-    "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
+    "Added more than 130 new icons;",
+    "Added 10 new wallpapers;",
+    "Added new icons variants;",	
+    "Updated translations;",
+    "Updated icons codes list;",
+    "Updated CandyBar base",	    
+    "Updated icons codes list;",	    
+    "Improvements and bug fixes.",	    
+    "<b>Thanks for choose Darkful,</b> <i>have a nice day.</i>"
   ]
 }
