--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -7,20 +7,14 @@
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-    "Improved support to Android 10;",
-    "Added more than 110 new icons;",
-    "Added 10 new wallpapers;",	
-    "Added new icons variants;",
-    "Added new functions;",
-    "Added shortcuts;",
-    "Redded support to Muzei;",
-    "Rebuilt and improved a lot of icons;",
-    "Improved MIUI icons;",
-    "Improved dark theme for amoled;",
+    "Added more than 120 new icons;",
+    "Added 10 new wallpapers;",
+    "Added new icons variants;",	
     "Updated translations;",
     "Updated icons codes list;",
-    "Updated CandyBar base;",
-    "Improvements and bug fixes;",
+    "Updated CandyBar base",	    
+    "Updated icons codes list;",	    
+    "Improvements and bug fixes.",
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
