--- a/darkful_config.json
+++ b/darkful_config.json
@@ -1,11 +1,11 @@
 {
-  "latestVersion": "2.2",
-  "latestVersionCode": 12,
+  "latestVersion": "2.3",
+  "latestVersionCode": 13,
   "disableRequest": {
-    "below": 11,
-    "on": "11"
+    "below": 12,
+    "on": "12"
   },
-  "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
+  "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.darkfulip",
   "releaseNotes": [
     "Added more than 130 new icons;",
     "Added 10 new wallpapers;",
