--- a/darkful_config.json
+++ b/darkful_config.json
@@ -7,7 +7,7 @@
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.darkfulip",
   "releaseNotes": [
-    "<b>IF AFTER THE UPDATE APP CRASHES, DELETE AND REINSTALL IT</b>"    
+    "<b>IF AFTER THE UPDATE APP CRASHES, DELETE AND REINSTALL IT</b>",
     "Added more than 130 new icons;",
     "Added 10 new wallpapers;",
     "Added new icons variants;",	
