--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -1,15 +1,17 @@
 {
-  "latestVersion": "7.3",
-  "latestVersionCode": 73,
+  "latestVersion": "8.0",
+  "latestVersionCode": 74,
   "disableRequest": {
-    "below": 72,
-    "on": "72"
+    "below": 73,
+    "on": "73"
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-    "Added more than 120 new icons;",
+    "A new Pixelful icon inspired by the past;",
+    "Added more than 50 new icons;",
     "Added 10 new wallpapers;",
     "Added new icons variants;",	
+    "Added automatic app theme;",
     "Updated translations;",
     "Updated icons codes list;",
     "Updated CandyBar base",	    
