--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -17,7 +17,7 @@
         "Added Ukrainian language;",
         "Analog clock is now resizable;",
         "Added Hyperion launcher;",
-        "Added Lawnchair 12</item>			
+        "Added Lawnchair 12;",		
         "Rebuilt and improved a lot of icons;",
         "Updated translations;",	
         "Updated icons codes list;",
