--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -7,19 +7,13 @@
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-        "Added more than 115 new icons;",
-        "Added 10 new wallpapers;",
-        "Added wallpapers search;",		
+        "Added 150 new icons;",
+        "Added 10 new wallpapers;",	
         "Added new icons variants;",
-        "Added support for bookmarking icons;",
-        "Added Norwegian language;",
-        "Added Hungarian language;",
-        "Added Ukrainian language;",
-        "Analog clock is now resizable;",
-        "Added Hyperion launcher;",
-        "Added Lawnchair 12;",		
+        "Added new languages;",
+        "Added Omega launcher;",
         "Rebuilt and improved a lot of icons;",
-        "Updated translations;",	
+        "Updated translations;",
         "Updated icons codes list;",
         "Updated CandyBar base;",	
         "Improvements and bug fixes.",
