--- a/darkful_config.json
+++ b/darkful_config.json
@@ -1,24 +1,22 @@
 {
-  "latestVersion": "3.0.1",
-  "latestVersionCode": 16,
+  "latestVersion": "5.0",
+  "latestVersionCode": 18,
   "disableRequest": {
-    "below": 15,
-    "on": "15"
+    "below": 17,
+    "on": "17"
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.darkfulip",
   "releaseNotes": [
-    "<b>IF AFTER THE UPDATE APP CRASHES, DELETE AND REINSTALL IT</b>",    
-    "A new Darkful icon inspired by the past;",
-    "Added more than 70 new icons;",
-    "Added 20 new wallpapers;",
-    "Added new icons variants;",	
-    "Added automatic app theme;",
-    "Fixed folders and drawer sections;",    
-    "Updated translations;",
-    "Updated icons codes list;",
-    "Updated CandyBar base",	    
-    "Updated icons codes list;",	    
-    "Improvements and bug fixes.",
-    "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
+        "Added more than 150 new icons;",
+        "Added 10 new wallpapers;",	
+        "Added new icons variants;",
+        "Added new languages;",
+        "Added Omega launcher;",
+        "Rebuilt and improved a lot of icons;",
+        "Updated translations;",
+        "Updated icons codes list;",
+        "Updated CandyBar base;",	
+        "Improvements and bug fixes.",
+    "<b>Thanks for choose Darkful,</b> <i>have a nice day.</i>"
   ]
 }
