--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -1,21 +1,25 @@
 {
   "latestVersion": "9.2",
-  "latestVersionCode": 78,
+  "latestVersionCode": 79,
   "disableRequest": {
-    "below": 78,
-    "on": "77"
+    "below": 79,
+    "on": "78"
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
-        "Added 130 new icons;",
-        "Added 10 new wallpapers;",	
+        "App rebuilt from scratch;",
+        "App updated to Material You;",
+        "Added new icons;",
         "Added new icons variants;",
+        "Added new wallpapers;",			
         "Added support to new launchers;",
-        "Rebuilt and improved a lot of icons;",
-        "Updated translations;",
+        "Added new features;",
+        "Rebuilt and improved some icons;",
+        "Updated translations;",	
         "Updated icons codes list;",
-        "Updated to latest CandyBar base;",	
-        "Improvements and bug fixes.",
+        "Updated to latest CandyBar base;",
+        "Improvements and bug fixes;",
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
+
