--- a/pixelful_config.json
+++ b/pixelful_config.json
@@ -1,9 +1,8 @@
 {
-  "latestVersion": "9.2",
+  "latestVersion": "10",
   "latestVersionCode": 79,
   "disableRequest": {
-    "below": 79,
-    "on": "78"
+    "below": 79
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.pixeliconpack",
   "releaseNotes": [
@@ -22,4 +21,5 @@
     "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
+
 
