--- a/darkful_config.json
+++ b/darkful_config.json
@@ -1,21 +1,24 @@
 {
-  "latestVersion": "5.1",
-  "latestVersionCode": 19,
+  "latestVersion": "6",
+  "latestVersionCode": 21,
   "disableRequest": {
-    "below": 18,
-    "on": "18"
+    "below": 21
   },
   "url": "https://play.google.com/store/apps/details?id=com.ciaostudio.darkfulip",
   "releaseNotes": [
-        "Added 140 new icons;",
-        "Added 20 new wallpapers;",	
+        "App rebuilt from scratch;",
+        "App updated to Material You;",
+        "Added new icons;",
         "Added new icons variants;",
+        "Added new wallpapers;",			
         "Added support to new launchers;",
-        "Rebuilt and improved a lot of icons;",
-        "Updated translations;",
+        "Added new features;",
+        "Rebuilt and improved some icons;",
+        "Updated translations;",	
         "Updated icons codes list;",
-        "Updated to latest CandyBar base;",	
-        "Improvements and bug fixes.",
-    "<b>Thanks for choose Darkful,</b> <i>have a nice day.</i>"
+        "Updated to latest CandyBar base;",
+        "Improvements and bug fixes;",
+    "<b>Thanks for choose Pixelful,</b> <i>have a nice day.</i>"
   ]
 }
+
